test: 테스트 케이스 작성 및 수정